--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+v0.1.3, 15 November 2011 -- Still trying to get pip to work.
 v0.1.2, 15 November 2011 -- Removed explicit numpy setup.py dependence, fixed package docstring.
 v0.1.1, 15 November 2011 -- Improved README file.
 v0.1.0, 11 November 2011 -- Initial release.
