--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,7 @@
-v0.3.1, 12 July 2012     -- Fixed column vector bug
-v0.3.0, 16 June 2012     -- Added Python 3 support, support for numpy "objects"
-v0.2.1, 25 November 2011 -- Added Sphinx documentation
-v0.1.4, 15 November 2011 -- One more try to get pip to work.
-v0.1.3, 15 November 2011 -- Still trying to get pip to work.
+v0.3.3, 17 August 2012   -- Improved speed for larger matrices, better handling of singleton dimensions.
+v0.3.2, 12 July 2012     -- Fixed column vector bug.
+v0.3.0, 16 June 2012     -- Added Python 3 support, support for numpy "objects".
+v0.2.1, 25 November 2011 -- Added Sphinx documentation.
+v0.1.4, 15 November 2011 -- Added support for pip.
 v0.1.2, 15 November 2011 -- Removed explicit numpy setup.py dependence, fixed package docstring.
-v0.1.1, 15 November 2011 -- Improved README file.
 v0.1.0, 11 November 2011 -- Initial release.
