--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+v0.3.5, 23 August 2012   -- Forced plots to render on newer Octave versions
 v0.3.4, 17 August 2012   -- Improved speed for larger matrices, better handling of singleton dimensions.
 v0.3.2, 12 July 2012     -- Fixed column vector bug.
 v0.3.0, 16 June 2012     -- Added Python 3 support, support for numpy "objects".
