--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
+v0.4.0, 5 Jan 2013       -- Limited support for sparse arrays (scipy.sparse.csc.csc_matrix)
+                         -- Singleton elements within a cell array are now treated as a singleton list
+                         -- Now tested on 32 and 64 bit architectures (32 only before)
+                         -- BUG: Console windows no longer pop up on Windows
+                         -- BUG: Incorrect octave commands show a more sensible error message
 v0.3.6, 8 October 2012   -- Fixed plot rendering for older Octave versions
                          -- Default octave working directory is now the same as the os working directory
-                         -- Singleton elements within a cell array are now treated as a singleton list
                          -- Low-level: no longer using a shell for the subprocess
 v0.3.5, 23 August 2012   -- Forced plots to render on newer Octave versions
 v0.3.4, 17 August 2012   -- Improved speed for larger matrices, better handling of singleton dimensions.
