--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,1 @@
-* Add a Octave code compability check function
-* Add a feature to scan a file for plot statements and automatically add a line to print the plot, allowing Python to render it.
+None: Oct2py is stable
