--- a/todo.txt
+++ b/todo.txt
@@ -6,11 +6,11 @@ Put ans handling in eval
 Remove info.rst syntax error warning
 Check octavemagic link
 Test plotting with Octave kernel
-Update contributors
+x- Update contributors
 Move "exist" logic from call to _eval
 Handle any sphinx errors
 Break test files up
-
+x- rename to core
 
 if nout:
     # create a dummy list of var names ("a", "b", "c", ...)
