--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,20 @@
 
 x - Fix isinstance(str)
-x- Move __del__ to Session
-Put ans handling in eval
+x - Move __del__ to Session
 x - Remove info.rst syntax error warning
-Check octavemagic link
-Test plotting with Octave kernel
-x- Update contributors
-Move "exist" logic from call to _eval
 x - Handle any sphinx errors
-Break test files up
-x- rename to core
+x - Break test files up
+x - rename to core
+x - Update contributors
+
+Move "exist" logic from call to _eval
+Put ans handling in eval
+
+fix octavemagic linkage with _
+Check octavemagic link
+
 Check handling of _ in octave kernel
+Test plotting with Octave kernel
 
 if nout:
     # create a dummy list of var names ("a", "b", "c", ...)
