--- a/todo.txt
+++ b/todo.txt
@@ -6,27 +6,11 @@ x - Handle any sphinx errors
 x - Break test files up
 x - rename to core
 x - Update contributors
-
-Move "exist" logic from call to _eval
-Put ans handling in eval
-
-fix octavemagic linkage with _
+x - Move "exist" logic from call to _eval
+x - Put ans handling in eval
+x - Update tests for new eval logic
+x - fix octavemagic linkage with _
 Check octavemagic link
 
 Check handling of _ in octave kernel
 Test plotting with Octave kernel
-
-if nout:
-    # create a dummy list of var names ("a", "b", "c", ...)
-    # use ascii char codes so we can increment
-    argout_list, save_line = self._reader.setup(nout)
-    call_line = '[{0}] = '.format(', '.join(argout_list))
-if inputs:
-    argin_list, load_line = self._writer.create_file(inputs)
-    call_line += '{0}({1})'.format(func, ', '.join(argin_list))
-elif nout and not '(' in func:
-    # call foo() - no arguments
-    call_line += '{0}()'.format(func)
-else:
-    # run foo
-    call_line += '{0}'.format(func)
