--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,5 @@ x - Update tests for new eval logic
 x - fix octavemagic linkage with _
 x - Check octavemagic link
 x - Check handling of _ in octave kernel
-
-Why are mat files being created in the directory for tests?
-Add plotting to Octave kernel
+x - Why are mat files being created in the directory for tests?
+x - Add plotting to Octave kernel
