--- a/todo.txt
+++ b/todo.txt
@@ -13,5 +13,6 @@ x - fix octavemagic linkage with _
 x - Check octavemagic link
 x - Check handling of _ in octave kernel
 x - Add plotting to Octave kernel
+x- Why are mat files being created in the directory for tests?
 
-Why are mat files being created in the directory for tests?
+Close octave instance in all of the tests to save memory
