--- a/todo.txt
+++ b/todo.txt
@@ -15,4 +15,5 @@ x - Check handling of _ in octave kernel
 x - Add plotting to Octave kernel
 x- Why are mat files being created in the directory for tests?
 
-Close octave instance in all of the tests to save memory
+Close Oct2Py instances in all of the tests to save memory
+All tests are failing on python 3
