--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,6 @@ x - Check octavemagic link
 x - Check handling of _ in octave kernel
 x - Add plotting to Octave kernel
 x- Why are mat files being created in the directory for tests?
+x - All tests are failing on python 3
+x - close Oct2Py instances in all of the tests to save memory
 
-Close Oct2Py instances in all of the tests to save memory
-All tests are failing on python 3
