--- a/todo.txt
+++ b/todo.txt
@@ -1,21 +1,2 @@
 
-x - Fix isinstance(str)
-x - Move __del__ to Session
-x - Remove info.rst syntax error warning
-x - Handle any sphinx errors
-x - Break test files up
-x - rename to core
-x - Update contributors
-x - Move "exist" logic from call to _eval
-x - Put ans handling in eval
-x - Update tests for new eval logic
-x - fix octavemagic linkage with _
-x - Check octavemagic link
-x - Check handling of _ in octave kernel
-x - Add plotting to Octave kernel
-x- Why are mat files being created in the directory for tests?
-x - All tests are failing on python 3
-x - close Oct2Py instances in all of the tests to save memory
-x - Fix plotting from command prompt
-
-Re-run demo and update docs
+x - Add inline toggingle to magics
