--- a/example/octavemagic_extension.ipynb
+++ b/example/octavemagic_extension.ipynb
@@ -723,7 +723,7 @@
     }
    ],
    "source": [
-    "%%octave -w 500 -h 500\n",
+    "%%octave -w 500 -h 500 -f svg\n",
     "\n",
     "% butterworth filter, order 2, cutoff pi/2 radians\n",
     "b = [0.292893218813452  0.585786437626905  0.292893218813452];\n",
